kubewarden/policies/always-pull-image-from-remote-registry.yml
apiVersion: policies.kubewarden.io/v1
kind: ClusterAdmissionPolicy
metadata:
  name: always-pull-image-from-remote-registry
spec:
  module: file:///<<file>>
  rules:
    - apiGroups: [""]
      apiVersions: ["v1"]
      resources: ["pods"]
      operations:
        - CREATE
        - UPDATE
  mutating: false
