kubewarden/policies/image-can-be-referenced-only-with-image-digest.yml
apiVersion: policies.kubewarden.io/v1
kind: ClusterAdmissionPolicy
metadata:
  name: image-can-be-referenced-only-with-image-digest
spec:
  module: registry://<<ociRegistry>>/image-can-be-referenced-only-with-image-digest:0.0.1
  rules:
    - apiGroups: [""]
      apiVersions: ["v1"]
      resources: ["pods"]
      operations:
        - CREATE
        - UPDATE
  mutating: false
