kubewarden/policies/images-can-be-referenced-only-from-allowed-registries.yml
# TODO: use params
apiVersion: policies.kubewarden.io/v1
kind: ClusterAdmissionPolicy
metadata:
  name: images-can-be-referenced-only-from-allowed-registries
spec:
  module: registry://<<ociRegistry>>/images-can-be-referenced-only-from-allowed-registries:0.0.1
  rules:
    - apiGroups: [""]
      apiVersions: ["v1"]
      resources: ["pods"]
      operations:
        - CREATE
        - UPDATE
  mutating: false
