kubewarden/policies/limits-and-requests-are-required.yml
apiVersion: policies.kubewarden.io/v1
kind: ClusterAdmissionPolicy
metadata:
  name: limits-and-requests-are-required
spec:
  module: registry://<<ociRegistry>>/limits-and-requests-are-required:0.0.1
  rules:
    - apiGroups: [""]
      apiVersions: ["v1"]
      resources: ["pods"]
      operations:
        - CREATE
        - UPDATE
  mutating: false
  contextAware: false
  executionMode: gatekeeper
