kubewarden/policies/liveness-probes-are-required.yml
apiVersion: policies.kubewarden.io/v1
kind: ClusterAdmissionPolicy
metadata:
  name: liveness-probes-are-required
spec:
  module: registry://<<ociRegistry>>/liveness-probes-are-required:0.0.1
  rules:
    - apiGroups: [""]
      apiVersions: ["v1"]
      resources: ["pods"]
      operations:
        - CREATE
        - UPDATE
  mutating: false
