kubewarden/policies/uid-under-10000-is-forbidden.yml
apiVersion: policies.kubewarden.io/v1
kind: ClusterAdmissionPolicy
metadata:
  name: uid-under-10000-is-forbidden
spec:
  module: file://../wasm/uid-under-10000-is-forbidden.wasm
  rules:
    - apiGroups: [""]
      apiVersions: ["v1"]
      resources: ["pods"]
      operations:
        - CREATE
        - UPDATE
  mutating: false
